--- a/java_backend/src/main/resources/application.properties
+++ b/java_backend/src/main/resources/application.properties
@@ -1,12 +1,28 @@
 spring.application.name=DeliveryOrderManagementZepto
 
-# PostgreSQL database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/Delivery_order_management_system_zepto
-spring.datasource.username=postgres
-spring.datasource.password=root123
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+## PostgreSQL database connection
+#spring.datasource.url=jdbc:postgresql://localhost:5432/Delivery_order_management_system_zepto
+#spring.datasource.username=postgres
+#spring.datasource.password=root123
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+#spring.data.mongodb.uri=mongodb://localhost:27017/Zepto_Products_Container
 
-spring.data.mongodb.uri=mongodb://localhost:27017/Zepto_Products_Container
+# -------------------------------
+# PostgreSQL (Supabase) database
+# -------------------------------
+# spring.datasource.url=jdbc:postgresql://db.deoqeylpretcfjtoscnj.supabase.co:5432/postgres
+# spring.datasource.username=postgres
+# spring.datasource.password=AnisSayyad@352003 
+# spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# # -------------------------------
+# # MongoDB (Atlas) database
+# # -------------------------------
+# spring.data.mongodb.uri=mongodb+srv://sayyadanis356:root123@cluster0.zt73u.mongodb.net/Zepto_Products_Container?retryWrites=true&w=majority
+
+#mongodb+srv://sayyadanis356:<db_password>@cluster0.zt73u.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
