--- a/java_backend/src/main/resources/application.properties
+++ b/java_backend/src/main/resources/application.properties
@@ -11,18 +11,18 @@ spring.application.name=DeliveryOrderManagementZepto
 #spring.data.mongodb.uri=mongodb://localhost:27017/Zepto_Products_Container
 
 # -------------------------------
-# PostgreSQL (Supabase) database
+# PostgreSQL (Supabase)
 # -------------------------------
-# spring.datasource.url=jdbc:postgresql://db.deoqeylpretcfjtoscnj.supabase.co:5432/postgres
-# spring.datasource.username=postgres
-# spring.datasource.password=AnisSayyad@352003 
-# spring.jpa.hibernate.ddl-auto=none
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# # -------------------------------
-# # MongoDB (Atlas) database
-# # -------------------------------
-# spring.data.mongodb.uri=mongodb+srv://sayyadanis356:root123@cluster0.zt73u.mongodb.net/Zepto_Products_Container?retryWrites=true&w=majority
+# -------------------------------
+# MongoDB (Atlas)
+# -------------------------------
+spring.data.mongodb.uri=${MONGO_URI}
 
 #mongodb+srv://sayyadanis356:<db_password>@cluster0.zt73u.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
