--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
+    "nprogress": "^0.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icon": "^1.0.0",
