--- a/java_backend/pom.xml
+++ b/java_backend/pom.xml
@@ -64,7 +64,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
