--- a/java_backend/pom.xml
+++ b/java_backend/pom.xml
@@ -70,6 +70,12 @@
             <version>4.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.razorpay</groupId>
+            <artifactId>razorpay-java</artifactId>
+            <version>1.4.4</version>
+        </dependency>
+
     </dependencies>
 
 	<build>
