--- a/java_backend/src/main/resources/application.properties
+++ b/java_backend/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.data.mongodb.uri=${MONGO_URI}
 
 #mongodb+srv://sayyadanis356:<db_password>@cluster0.zt73u.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+razorpay.key_id=rzp_test_Rg2Xl4W3DJ9Vzd
+razorpay.key_secret=4jW2XUib6Wr57eiACgwQadqB
